--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unique Paint</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./Style/style.css">
     
 </head>
 
@@ -15,13 +15,13 @@
     <header>
         <div class="container">
             <div class="logo">
-                <a href="./index.html"><img src="./Image/Logo.png" alt="Logo"></a>
+                <a href="../index.html"><img src="../Image/Logo.png" alt="Logo"></a>
             </div>
             <nav>
                 <ul>
-                    <li><a href="paint.html">Paints</a></li>
-                    <li><a href="login.html">Login</a></li>
-                    <li><a href="signup.html">Signup</a></li>
+                    <li><a href="../Paint/paint.html">Paints</a></li>
+                    <li><a href="./Signup-Login/login.html">Login</a></li>
+                    <li><a href="./Signup-Login/signup.html">Signup</a></li>
                 </ul>
             </nav>
         </div>
@@ -45,20 +45,20 @@
         <div class="content-section">
             <table>
                 <tr>
-                    <td><a href="./Image/1 (10).png"><img src="./Image/1 (10).png" alt="Light" height="615px" width="615px"></a></td>
-                    <td><a href="./Image/1 (2).png"><img src="./Image/1 (2).png" alt="Paint" height="615px" width="615px"></a></td>
-                    <td><a href="./Image/1 (3).png"><img src="./Image/1 (3).png" alt="Elephant" height="615px" width="615px"></a></td>
+                    <td><a href="./Image/Tiger.png"><img src="./Image/Tiger.png" alt="Light" class="img"></a></td>
+                    <td><a href="./Image/paint.png"><img src="./Image/paint.png" alt="Paint" class="img"></a></td>
+                    <td><a href="./Image/color headphon.png"><img src="./Image/color headphon.png" alt="Elephant" class="img"></a></td>
                 </tr>
                 <tr>
-                    <td><a href="./Image/1 (5).png"><img src="./Image/1 (5).png" alt="Bird" height="615px" width="615px"></a></td>
-                    <td><a href="./Image/1 (6).png"><img src="./Image/1 (6).png" alt="Tiger" height="615px" width="615px"></a></td>
-                    <td><a href="./Image/1 (11).png"><img src="./Image/1 (11).png" alt="Headphone" height="615px" width="615px"></a></td>
+                    <td><a href="./Image/Elephent.png"><img src="./Image/Elephent.png" alt="Bird" class="img"></a></td>
+                    <td><a href="./Image/bird.png"><img src="./Image/bird.png" alt="Tiger" class="img"></a></td>
+                    <td><a href="./Image/light.png"><img src="./Image/light.png" alt="Headphone" class="img"></a></td>
                 </tr>
             </table>
             </div>
         </main>
             <!-- Footer -->
-            <footer>
+            <footer id="footer">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-4">
@@ -87,11 +87,11 @@
                 </div>
                 <nav id="secound-nav">
                     <ul>
-                        <li><a href="./about.html">About Us</a></li>
-                        <li><a href="./contect.html">Contact Us</a></li>
-                        <li><a href="./faq.html">FAQ</a></li>
-                        <li><a href="./privecypolicy.html">Privacy Policy</a></li>
-                        <li><a href="terms&condition.html">Terms & Conditions</a></li>
+                        <li><a href="./Pages/about.html">About Us</a></li>
+                        <li><a href="./Pages/contect.html">Contact Us</a></li>
+                        <li><a href="./Pages/faq.html">FAQ</a></li>
+                        <li><a href="./Pages/privecypolicy.html">Privacy Policy</a></li>
+                        <li><a href="./Pages/terms&condition.html">Terms & Conditions</a></li>
                     </ul>
                 </nav>
 
