--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <header>
         <div class="container">
             <div class="logo">
-                <a href="../index.html"><img src="../Image/Logo.png" alt="Logo"></a>
+                <a href="index.html"><img src="Image/Logo.png" alt="Logo"></a>
             </div>
             <nav>
                 <ul>
-                    <li><a href="../Paint/paint.html">Paints</a></li>
+                    <li><a href="./Paint/paint.html">Paints</a></li>
                     <li><a href="./Signup-Login/login.html">Login</a></li>
                     <li><a href="./Signup-Login/signup.html">Signup</a></li>
                 </ul>
